--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testImplementation "io.kotest:kotest-assertions-core:4.3.1"
 }
