--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
 group 'com.bbrakenhoff.adventofcode'
@@ -15,6 +15,7 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testImplementation "io.kotest:kotest-assertions-core:4.3.1"
+    testImplementation "io.mockk:mockk:1.10.0"
 }
 
 test {
